# winterm2

./: .gitignore  AGENT_TEAMS_GUIDE.md  CLI_SPECIFICATION.md  EDGE_CASE_ANALYSIS.md  ERROR_CODES.md  HELP_STRUCTURE.md  LICENSE  MULTI_AGENT_GUIDE.md  README.md  README_CHEATSHEET.md  README_INSTALL.md  README_QUICKSTART.md  example.wt2rc.yaml  pyproject.toml
chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
scoop/bucket/: winterm2.json
scripts/: start_team.py  team_dev.py
src/wt2/: __init__.py  cli.py
src/wt2/adapter/: __init__.py  base.py  cmd.py  powershell.py  terminal.py  wsl.py
src/wt2/adapters/: __init__.py  powershell_adapter.py  terminal_adapter.py  wsl_adapter.py
src/wt2/commands/: __init__.py  broadcast.py  config.py  monitor.py  pane.py  session.py  tab.py  window.py
src/wt2/core/: __init__.py  adapter.py  connection.py  exceptions.py  session.py  session_handler.py  terminal.py
src/wt2/utils/: __init__.py  compat.py  config.py  elevation.py  path.py  platform.py  terminal_check.py
tests/: __init__.py  conftest.py  test_cli.py
tests/test_adapter/: test_powershell_adapter.py  test_terminal_adapter.py  test_wsl_adapter.py
tests/test_commands/: test_pane.py  test_session.py  test_tab.py  test_window.py
tests/test_core/: test_session.py  test_terminal.py
tests/test_utils/: test_config.py  test_path.py
